--- a/notCmake/Mathematical_Library/Mathematical_Library/Mathematical_Library.vcxproj.filters
+++ b/notCmake/Mathematical_Library/Mathematical_Library/Mathematical_Library.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrayImpl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
