--- a/notCmake/Mathematical_Library/Mathematical_Library/Mathematical_Library.vcxproj
+++ b/notCmake/Mathematical_Library/Mathematical_Library/Mathematical_Library.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="Array.h" />
     <ClInclude Include="ArrayImpl.h" />
+    <ClInclude Include="Outils_Math.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
